--- a/deep learning/hw05/chapter11_part02_sequence-models.ipynb
+++ b/deep learning/hw05/chapter11_part02_sequence-models.ipynb
@@ -35,6 +35,86 @@
     "!tar -xf aclImdb_v1.tar.gz\n",
     "!rm -r aclImdb/train/unsup"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc0f0f01",
+   "metadata": {},
+   "source": [
+    "**Preparing the data**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "529d2c7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os, pathlib, shutil, random\n",
+    "from tensorflow import keras\n",
+    "batch_size = 32\n",
+    "base_dir = pathlib.Path(\"aclImdb\")\n",
+    "val_dir = base_dir / \"val\"\n",
+    "train_dir = base_dir / \"train\"\n",
+    "for category in (\"neg\", \"pos\"):\n",
+    "    os.makedirs(val_dir / category)\n",
+    "    files = os.listdir(train_dir / category)\n",
+    "    random.Random(1337).shuffle(files)\n",
+    "    num_val_samples = int(0.2 * len(files))\n",
+    "    val_files = files[-num_val_samples:]\n",
+    "    for fname in val_files:\n",
+    "        shutil.move(train_dir / category / fname,\n",
+    "                    val_dir / category / fname)\n",
+    "\n",
+    "train_ds = keras.utils.text_dataset_from_directory(\n",
+    "    \"aclImdb/train\", batch_size=batch_size\n",
+    ")\n",
+    "val_ds = keras.utils.text_dataset_from_directory(\n",
+    "    \"aclImdb/val\", batch_size=batch_size\n",
+    ")\n",
+    "test_ds = keras.utils.text_dataset_from_directory(\n",
+    "    \"aclImdb/test\", batch_size=batch_size\n",
+    ")\n",
+    "text_only_train_ds = train_ds.map(lambda x, y: x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5cff4ce",
+   "metadata": {},
+   "source": [
+    "**Preparing integer sequence datasets**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cec3e071",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras import layers\n",
+    "\n",
+    "max_length = 600\n",
+    "max_tokens = 20000\n",
+    "text_vectorization = layers.TextVectorization(\n",
+    "    max_tokens=max_tokens,\n",
+    "    output_mode=\"int\",\n",
+    "    output_sequence_length=max_length,\n",
+    ")\n",
+    "text_vectorization.adapt(text_only_train_ds)\n",
+    "\n",
+    "int_train_ds = train_ds.map(\n",
+    "    lambda x, y: (text_vectorization(x), y),\n",
+    "    num_parallel_calls=4)\n",
+    "int_val_ds = val_ds.map(\n",
+    "    lambda x, y: (text_vectorization(x), y),\n",
+    "    num_parallel_calls=4)\n",
+    "int_test_ds = test_ds.map(\n",
+    "    lambda x, y: (text_vectorization(x), y),\n",
+    "    num_parallel_calls=4)"
+   ]
   }
  ],
  "metadata": {
