--- a/deep learning/hw05/chapter11_part02_sequence-models.ipynb
+++ b/deep learning/hw05/chapter11_part02_sequence-models.ipynb
@@ -115,6 +115,58 @@
     "    lambda x, y: (text_vectorization(x), y),\n",
     "    num_parallel_calls=4)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f8be090",
+   "metadata": {},
+   "source": [
+    "**A sequence model built on one-hot encoded vector sequences**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15adea7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "inputs = keras.Input(shape=(None,), dtype=\"int64\")\n",
+    "embedded = tf.one_hot(inputs, depth=max_tokens)\n",
+    "x = layers.Bidirectional(layers.LSTM(32))(embedded)\n",
+    "x = layers.Dropout(0.5)(x)\n",
+    "outputs = layers.Dense(1, activation=\"sigmoid\")(x)\n",
+    "model = keras.Model(inputs, outputs)\n",
+    "model.compile(optimizer=\"rmsprop\",\n",
+    "              loss=\"binary_crossentropy\",\n",
+    "              metrics=[\"accuracy\"])\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a62ff2a3",
+   "metadata": {},
+   "source": [
+    "**Training a first basic sequence model**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c499a277",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "callbacks = [\n",
+    "    keras.callbacks.ModelCheckpoint(\"one_hot_bidir_lstm.keras\",\n",
+    "                                    save_best_only=True)\n",
+    "]\n",
+    "model.fit(int_train_ds, validation_data=int_val_ds, epochs=10, callbacks=callbacks)\n",
+    "model = keras.models.load_model(\"one_hot_bidir_lstm.keras\")\n",
+    "print(f\"Test acc: {model.evaluate(int_test_ds)[1]:.3f}\")"
+   ]
   }
  ],
  "metadata": {
