--- a/deep learning/hw05/chapter11_part02_sequence-models.ipynb
+++ b/deep learning/hw05/chapter11_part02_sequence-models.ipynb
@@ -167,6 +167,75 @@
     "model = keras.models.load_model(\"one_hot_bidir_lstm.keras\")\n",
     "print(f\"Test acc: {model.evaluate(int_test_ds)[1]:.3f}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b33e4e1d",
+   "metadata": {},
+   "source": [
+    "#### Understanding word embeddings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "251c655b",
+   "metadata": {},
+   "source": [
+    "#### Learning word embeddings with the Embedding layer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5970fb6",
+   "metadata": {},
+   "source": [
+    "**Instantiating an `Embedding` layer**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbbef34b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embedding_layer = layers.Embedding(input_dim=max_tokens, output_dim=256)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1576f7fa",
+   "metadata": {},
+   "source": [
+    "**Model that uses an `Embedding` layer trained from scratch**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6732ad93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputs = keras.Input(shape=(None,), dtype=\"int64\")\n",
+    "embedded = layers.Embedding(input_dim=max_tokens, output_dim=256)(inputs)\n",
+    "x = layers.Bidirectional(layers.LSTM(32))(embedded)\n",
+    "x = layers.Dropout(0.5)(x)\n",
+    "outputs = layers.Dense(1, activation=\"sigmoid\")(x)\n",
+    "model = keras.Model(inputs, outputs)\n",
+    "model.compile(optimizer=\"rmsprop\",\n",
+    "              loss=\"binary_crossentropy\",\n",
+    "              metrics=[\"accuracy\"])\n",
+    "model.summary()\n",
+    "\n",
+    "callbacks = [\n",
+    "    keras.callbacks.ModelCheckpoint(\"embeddings_bidir_gru.keras\",\n",
+    "                                    save_best_only=True)\n",
+    "]\n",
+    "model.fit(int_train_ds, validation_data=int_val_ds, epochs=10, callbacks=callbacks)\n",
+    "model = keras.models.load_model(\"embeddings_bidir_gru.keras\")\n",
+    "print(f\"Test acc: {model.evaluate(int_test_ds)[1]:.3f}\")"
+   ]
   }
  ],
  "metadata": {
