--- a/deep learning/hw05/chapter11_part02_sequence-models.ipynb
+++ b/deep learning/hw05/chapter11_part02_sequence-models.ipynb
@@ -236,6 +236,50 @@
     "model = keras.models.load_model(\"embeddings_bidir_gru.keras\")\n",
     "print(f\"Test acc: {model.evaluate(int_test_ds)[1]:.3f}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e08da7fe",
+   "metadata": {},
+   "source": [
+    "#### Understanding padding and masking"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9209f5bb",
+   "metadata": {},
+   "source": [
+    "**Using an `Embedding` layer with masking enabled**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ea8415a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputs = keras.Input(shape=(None,), dtype=\"int64\")\n",
+    "embedded = layers.Embedding(\n",
+    "    input_dim=max_tokens, output_dim=256, mask_zero=True)(inputs)\n",
+    "x = layers.Bidirectional(layers.LSTM(32))(embedded)\n",
+    "x = layers.Dropout(0.5)(x)\n",
+    "outputs = layers.Dense(1, activation=\"sigmoid\")(x)\n",
+    "model = keras.Model(inputs, outputs)\n",
+    "model.compile(optimizer=\"rmsprop\",\n",
+    "              loss=\"binary_crossentropy\",\n",
+    "              metrics=[\"accuracy\"])\n",
+    "model.summary()\n",
+    "\n",
+    "callbacks = [\n",
+    "    keras.callbacks.ModelCheckpoint(\"embeddings_bidir_gru_with_masking.keras\",\n",
+    "                                    save_best_only=True)\n",
+    "]\n",
+    "model.fit(int_train_ds, validation_data=int_val_ds, epochs=10, callbacks=callbacks)\n",
+    "model = keras.models.load_model(\"embeddings_bidir_gru_with_masking.keras\")\n",
+    "print(f\"Test acc: {model.evaluate(int_test_ds)[1]:.3f}\")"
+   ]
   }
  ],
  "metadata": {
