--- a/deep learning/hw05/chapter11_part02_sequence-models.ipynb
+++ b/deep learning/hw05/chapter11_part02_sequence-models.ipynb
@@ -280,6 +280,97 @@
     "model = keras.models.load_model(\"embeddings_bidir_gru_with_masking.keras\")\n",
     "print(f\"Test acc: {model.evaluate(int_test_ds)[1]:.3f}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a0a9b49",
+   "metadata": {},
+   "source": [
+    "#### Using pretrained word embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a6d1446",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget http://nlp.stanford.edu/data/glove.6B.zip\n",
+    "!unzip -q glove.6B.zip"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3daa087c",
+   "metadata": {},
+   "source": [
+    "**Parsing the GloVe word-embeddings file**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42c72ba7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "path_to_glove_file = \"glove.6B.100d.txt\"\n",
+    "\n",
+    "embeddings_index = {}\n",
+    "with open(path_to_glove_file) as f:\n",
+    "    for line in f:\n",
+    "        word, coefs = line.split(maxsplit=1)\n",
+    "        coefs = np.fromstring(coefs, \"f\", sep=\" \")\n",
+    "        embeddings_index[word] = coefs\n",
+    "\n",
+    "print(f\"Found {len(embeddings_index)} word vectors.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc9e8aac",
+   "metadata": {},
+   "source": [
+    "**Preparing the GloVe word-embeddings matrix**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abba0e46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embedding_dim = 100\n",
+    "\n",
+    "vocabulary = text_vectorization.get_vocabulary()\n",
+    "word_index = dict(zip(vocabulary, range(len(vocabulary))))\n",
+    "\n",
+    "embedding_matrix = np.zeros((max_tokens, embedding_dim))\n",
+    "for word, i in word_index.items():\n",
+    "    if i < max_tokens:\n",
+    "        embedding_vector = embeddings_index.get(word)\n",
+    "    if embedding_vector is not None:\n",
+    "        embedding_matrix[i] = embedding_vector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "267bd0f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embedding_layer = layers.Embedding(\n",
+    "    max_tokens,\n",
+    "    embedding_dim,\n",
+    "    embeddings_initializer=keras.initializers.Constant(embedding_matrix),\n",
+    "    trainable=False,\n",
+    "    mask_zero=True,\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
