--- a/deep learning/hw05/chapter11_part02_sequence-models.ipynb
+++ b/deep learning/hw05/chapter11_part02_sequence-models.ipynb
@@ -371,6 +371,41 @@
     "    mask_zero=True,\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b101f07",
+   "metadata": {},
+   "source": [
+    "**Model that uses a pretrained Embedding layer**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fdba8f0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputs = keras.Input(shape=(None,), dtype=\"int64\")\n",
+    "embedded = embedding_layer(inputs)\n",
+    "x = layers.Bidirectional(layers.LSTM(32))(embedded)\n",
+    "x = layers.Dropout(0.5)(x)\n",
+    "outputs = layers.Dense(1, activation=\"sigmoid\")(x)\n",
+    "model = keras.Model(inputs, outputs)\n",
+    "model.compile(optimizer=\"rmsprop\",\n",
+    "              loss=\"binary_crossentropy\",\n",
+    "              metrics=[\"accuracy\"])\n",
+    "model.summary()\n",
+    "\n",
+    "callbacks = [\n",
+    "    keras.callbacks.ModelCheckpoint(\"glove_embeddings_sequence_model.keras\",\n",
+    "                                    save_best_only=True)\n",
+    "]\n",
+    "model.fit(int_train_ds, validation_data=int_val_ds, epochs=10, callbacks=callbacks)\n",
+    "model = keras.models.load_model(\"glove_embeddings_sequence_model.keras\")\n",
+    "print(f\"Test acc: {model.evaluate(int_test_ds)[1]:.3f}\")"
+   ]
   }
  ],
  "metadata": {
